# codecrafters-kafka-rust

./: Cargo.toml  README.md  codecrafters.yml
src/: main.rs
src/kafka/: api.rs  apikey.rs  basics.rs  body.rs  errors.rs  fetch.rs  header.rs  incoming.rs  metadata.rs  mod.rs  parser.rs  partitions.rs  produce.rs  records.rs  writer.rs
