[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["scalability3@gmail.com"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
async-std = "1.13.0"
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling

[features]

