[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["scalability3@gmail.com"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
crc32c = "0.6.8"
thiserror = "1.0.38"                             # error handling

[features]

